--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: hsl(47, 88%, 63%);
-    min-height: 100vh;
+    min-height: 100svh;
     padding: 1rem;
     display: flex;
     justify-content: center;
