--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,9 @@
 body {
     background-color: hsl(47, 88%, 63%);
     min-height: 100svh;
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center; /* makes the content completely centered */
-}
-
-@media (min-width: 768px) { 
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+    display: grid;
+    place-items: center;
+    overflow: hidden;
 }
 
 #card {
